--- a/style.scss
+++ b/style.scss
@@ -12,12 +12,11 @@ header {
     height: 22.4vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #FF69B4;
     color: #E4EEF1;
     font-size: 28px;
     font-weight: 400;
-    padding: 0 50px;
     figure {
         display: flex;
         align-items: center;
@@ -33,6 +32,11 @@ header {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        width: 35vw;
+        a {
+            color: #E4EEF1;
+            text-decoration: none;
+        }
     }
 }
 
@@ -40,11 +44,13 @@ header {
     height: 71.8vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: #FFD9EC;
     font-size: 25px;
     font-weight: 400;
-    padding: 0 50px;
+    p {
+        width: 40vw;
+    }
     img {
         width: 24.9vw;
     }
@@ -54,12 +60,14 @@ header {
     height: 49.9vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: #FF69B4;
     color: #E4EEF1;
     font-size: 25px;
     font-weight: 400;
-    padding: 0 50px;
+    p {
+        width: 40vw;
+    }
     img {
         width: 28.7vw;
     }
@@ -69,23 +77,27 @@ header {
     height: 81.1vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     background-color: #FFD9EC;
-    padding: 0 50px;
     img {
         width: 17vw;
     }
 }
 
 footer {
-    height: 27.2vh;
+    height: 20vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     text-align: center;
     background-color: #FF69B4;
     color: #E4EEF1;
     font-size: 20px;
     font-weight: 400;
-    padding: 0 50px;
+    ul {
+        width: 15vw;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
